# P3Pf_VS2013

./: CMakeLists.txt  README.txt
cmake/: OptimizeCompilerFlags.cmake
ext/: CMakeLists.txt
src/: CMakeLists.txt  camera_pose.cc  camera_pose.h  p3p_solver.cc  p3p_solver.h  p3pf.cc  p3pf.h  p3pf_example.cc  p3pf_params.h
